--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<!--  <background></background>-->
+  <background></background>
   <app-root></app-root>
 </body>
 </html>
